2006-02-03 TADA Tadashi <sho@spc.gr.jp>
	* large change about referer: daily management, volatile link, etc.
	* default_io.rb: ignore error when *.tdc was empty.

2006-01-02 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/defaultio.rb: ignore Errno::NOENT when delete empty file.

2005-12-09  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/convert2.rb: revise for current tdiary.rb.

2005-10-23 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb, plugin/10spamfilter.rb, plugin/*/10spamfilter.rb:
	  add safe domain list at referer check.

2005-10-22 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: change uri regexp pattern in DNSBL filter.

2005-10-22 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb: add debug messege and retry process in DNSBL filter.

2005-10-21 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/wiki_style.rb: fix enbuged on 2.1.3.20051020.

2005-10-21 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb, plugin/10spamfilter.rb, plugin/*/10spamfilter.rb:
	  remove IP Blacklist filter. add two services to Domain Blacklist initialization.

2005-10-20 SHIBATA Hiroshi <h-sbt@nifty.com>
	* tdiary/filter/spam.rb, plugin/10spamfilter.rb, plugin/*/10spamfilter.rb: add DNSBL filter.

2005-10-20 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/wiki_style.rb: enable specify "{{'</p>'}}" into text.

2005-10-16 TADA Tadashi <sho@spc.gr.jp>
	* doc/HOWTO-make-plugin.html: add about section_enter/leave_proc.

2005-10-15  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/wiki_style.rb (to_html): support multi-line plugins.

2005-10-12 TADA Tadashi <sho@spc.gr.jp>
	* tdiary.rb, *_style.rb, theme/base.css: add section_enter/leave_proc.

2005-10-10 TADA Tadashi <sho@spc.gr.jp>
	* plugin/00default.rb: my plugin: fix bug when @index was full path.

2005-10-06 TADA Tadashi <sho@spc.gr.jp>
	* tdiary/hikidoc.rb, tdiary/wiki_style.rb: support relative inline URL.
	  This is a temporally fix.

2005-10-02  Kazuhiko  <kazuhiko@fdiary.net>
	* tdiary/hikidoc.rb: sync with hikidoc rev.33.